Angular_github_search works

--- a/angular_mobx_examples/github_search/angular_github_search/lib/src/github_search_form/github_search_body/github_search_body_component.html
+++ b/angular_mobx_examples/github_search/angular_github_search/lib/src/github_search_form/github_search_body/github_search_body_component.html
@@ -1,23 +1,23 @@
 <div *mobxAutorun>
-    <div>{{store.status}}</div>
-    <div>{{store.searchToken}}</div>
-  <!--<div *ngIf="state != null" class="mw10">-->
     <div *ngIf="store.searchToken.isEmpty" class="tc">
-      <material-icon icon="info" class="light-blue"></material-icon>
-      <p>Please enter a term to begin</p>
+        <material-icon icon="info" class="light-blue"></material-icon>
+        <p>Please enter a term to begin</p>
     </div>
-    <div *ngIf="store.status == StoreStatus.pending" class="tc"><material-spinner></material-spinner></div>
-    <div *ngIf="store.status == StoreStatus.rejected" class="tc">
-      <material-icon icon="error" class="light-red"></material-icon>
-      <p>{{ store.error }}</p>
+    <div *ngIf="store.isPending" class="tc">
+        <material-icon *ngIf="store.waitingForInputCompletion" icon="keyboard" class="light-blue"></material-icon>
+        <material-icon *ngIf="!store.waitingForInputCompletion" icon="import_export" class="light-blue"></material-icon>
+        <material-spinner></material-spinner>
     </div>
-    <div *ngIf="store.status == StoreStatus.fulfilled">
-      <div *ngIf="store.repositories.isEmpty" class="tc">
-        <material-icon icon="warning" class="light-yellow"></material-icon>
-        <p>No Results</p>
-      </div>
-      <github-search-results></github-search-results>
+    <div *ngIf="store.fetchReposFuture.status == FutureStatus.rejected" class="tc">
+        <material-icon icon="error" class="light-red"></material-icon>
+        <p>{{ store.fetchReposFuture.error }}</p>
     </div>
-  <!--</div>-->
+    <div *ngIf="store.resultIsEmpty">
+        <div class="tc">
+            <material-icon icon="warning" class="light-yellow"></material-icon>
+            <p>No Results</p>
+        </div>
+    </div>
+    <github-search-results *ngIf="store.hasResults"></github-search-results>
 
 </div>
