*mobxAutorun -> *observer, to match flutter_mobx naming conventions. Readme added

--- a/angular_mobx_examples/github_search/angular_github_search/lib/src/github_search_form/github_search_body/github_search_body_component.html
+++ b/angular_mobx_examples/github_search/angular_github_search/lib/src/github_search_form/github_search_body/github_search_body_component.html
@@ -1,4 +1,4 @@
-<div *mobxAutorun>
+<div *observer>
     <div *ngIf="store.status == StoreStatus.initial" class="tc">
         <material-icon icon="info" class="light-blue"></material-icon>
         <p>Please enter a term to begin</p>
