--- a/angular_mobx_examples/angular_counter/lib/src/counter_page/counter_page_component.html
+++ b/angular_mobx_examples/angular_counter/lib/src/counter_page/counter_page_component.html
@@ -1,6 +1,8 @@
-<div *mobxAutorun class="counter-page-container">
+<div class="counter-page-container">
     <h1>Counter App</h1>
-    <h2>Current Count: {{ counter.value}}</h2>
+    <div *observer>
+        <h2>Current Count: {{ counter.value}}</h2>
+    </div>
     <material-fab class="counter-fab-button" (trigger)="counter.increment()">+</material-fab>
     <material-fab class="counter-fab-button" (trigger)="counter.decrement()">-</material-fab>
     <material-fab class="counter-fab-button" (trigger)="counter.startTimer()">start</material-fab>
